[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Actor/Player.gd" type="Script" id=1]
[ext_resource path="res://src/Item/Gun_sniper.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/smoke_jump.png" type="Texture" id=3]
[ext_resource path="res://src/Item/Gun.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.1831, 31.0732 )

[sub_resource type="Animation" id=2]
resource_name = "jump"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("smoke_jump:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.5, 0.4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("smoke_jump:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Player" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" type="KinematicBody2D" parent="."]
collision_mask = 6

[node name="sprite" type="Sprite" parent="Player"]
position = Vector2( 0, -31.1928 )
scale = Vector2( 0.25, 0.25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, -31.1928 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.8, 0.8 )
limit_left = -100
limit_top = -100
limit_right = 1124
limit_bottom = 700
smoothing_enabled = true
smoothing_speed = 1.5
drag_margin_top = 0.4
drag_margin_bottom = 0.4

[node name="GunPosition" type="Position2D" parent="Player"]
position = Vector2( 0, -27.5439 )

[node name="Gun_hand" type="Position2D" parent="Player/GunPosition"]
position = Vector2( 17.2032, 0 )

[node name="Gun_hand" parent="Player/GunPosition/Gun_hand" instance=ExtResource( 4 )]

[node name="Gun_second" type="Position2D" parent="Player/GunPosition"]
position = Vector2( -17.231, 0 )
rotation = -1.5708

[node name="Gun_second" parent="Player/GunPosition/Gun_second" instance=ExtResource( 2 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/jump = SubResource( 2 )

[node name="smoke_jump" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, 10.3009 )
scale = Vector2( 0.5, 0.4 )
texture = ExtResource( 3 )
